--- a/ponto-alpha/app/css/fullpage.css
+++ b/ponto-alpha/app/css/fullpage.css
@@ -234,3 +234,18 @@ html.fp-enabled,
     white-space: nowrap;
     border: 0;
 }
+
+#user-list {
+    height: 480px;
+    position: relative;
+    overflow-y: scroll;
+}
+
+.user-card {
+    margin-bottom: 10px;
+}
+
+a:hover {
+    color: #0056b3;
+    text-decoration: none;
+}
