--- a/ponto-alpha/app/css/flipclock.css
+++ b/ponto-alpha/app/css/flipclock.css
@@ -14,7 +14,7 @@
     /*transform: translateX(-50%) translateY(-50%);*/
     font-family: digital;
     color: black;
-    font-size: 200px;
+    font-size: 8rem;
     letter-spacing: 7px;
     margin: 20px;
 }
